<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchDeviceEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:hint="@string/device_name"/>

        <Button
            android:id="@+id/searchDeviceButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:backgroundTint="@color/button"
            android:textColor="@color/button_text"
            android:text="@string/search_device"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sensor_1"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/pressureTextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_pressure"
        android:textColor="@color/text"
        android:textSize="23dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sensor_2"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/pressureTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_pressure"
        android:textColor="@color/text"
        android:textSize="23dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">
        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textColor="@color/button_text"
            android:backgroundTint="@color/button" />
        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/disconnect"
            android:textColor="@color/button_text"
            android:backgroundTint="@color/button" />
    </LinearLayout>
</LinearLayout>